fix(table): move sort icon to left side
Sort icon moved to left side and removes whitespace between the icon and
the text that creates 3 pixels of extra space.

Version update to new beta also includes some CSS custom property
refactors that should simplify emphasized and non-emphasized.

--- a/packages/table/src/spectrum-table-body.css
+++ b/packages/table/src/spectrum-table-body.css
@@ -12,13 +12,6 @@ governing permissions and limitations under the License.
 
 /* THIS FILE IS MACHINE GENERATED. DO NOT EDIT */
 :host {
-    --spectrum-table-cell-background-color: var(
-        --highcontrast-table-row-background-color,
-        var(
-            --mod-table-row-background-color,
-            var(--spectrum-table-row-background-color)
-        )
-    );
     border: none;
     border-radius: var(
         --mod-table-border-radius,
