--- a/packages/table/src/spectrum-table.css
+++ b/packages/table/src/spectrum-table.css
@@ -145,6 +145,29 @@ governing permissions and limitations under the License.
         --spectrum-table-thumbnail-to-top-minimum-medium-regular
     );
     --spectrum-table-thumbnail-size: var(--spectrum-thumbnail-size-300);
+    --spectrum-table-cell-background-color: var(
+        --highcontrast-table-row-background-color,
+        var(
+            --mod-table-row-background-color,
+            var(--spectrum-table-row-background-color)
+        )
+    );
+    --spectrum-table-selected-cell-background-color: var(
+        --highcontrast-table-selected-row-background-color,
+        var(
+            --mod-table-selected-row-background-color-non-emphasized,
+            var(--spectrum-table-selected-row-background-color-non-emphasized)
+        )
+    );
+    --spectrum-table-selected-cell-background-color-focus: var(
+        --highcontrast-table-selected-row-background-color-focus,
+        var(
+            --mod-table-selected-row-background-color-non-emphasized-focus,
+            var(
+                --spectrum-table-selected-row-background-color-non-emphasized-focus
+            )
+        )
+    );
     --mod-thumbnail-size: var(
         --mod-table-thumbnail-size,
         var(--spectrum-table-thumbnail-size)
@@ -479,6 +502,22 @@ governing permissions and limitations under the License.
     --mod-table-thumbnail-size: var(
         --mod-table-thumbnail-size-spacious,
         var(--spectrum-thumbnail-size-800)
+    );
+}
+:host([emphasized]) {
+    --spectrum-table-selected-cell-background-color: var(
+        --highcontrast-table-selected-row-background-color,
+        var(
+            --mod-table-selected-row-background-color,
+            var(--spectrum-table-selected-row-background-color)
+        )
+    );
+    --spectrum-table-selected-cell-background-color-focus: var(
+        --highcontrast-table-selected-row-background-color-focus,
+        var(
+            --mod-table-selected-row-background-color-focus,
+            var(--spectrum-table-selected-row-background-color-focus)
+        )
     );
 }
 :host([quiet]) {
